# DE_zoomcamp_2026

./: .bruin.yml  .gitignore  README.md  check_tables.py  debug_db.py  find_db.py  query_players.py  query_result.py
01_Docker_Pipeline/Terraform/: main.tf
01_Docker_Pipeline/pipeline/: Dockerfile  ingest_taxi_data_nov_2025.py  ingest_zones.py  requirements.txt
01_Docker_Pipeline/test/pipeline/: pipeline.py
02-workflow-orchestration/: 02_python.yaml  04_postgres_taxi.yaml  06_gcp_kv.yaml  09_gcp_taxi_scheduled.yaml
03_datawarehouse_bigquery/: README.md  web_to_gcs.py  web_to_gcs_hw.py
04_Analytics_Engineering/: dbt_project.yml  web_gcs_fhv.py  web_gcs_green.py  web_to_gcs_yellow.py
04_Analytics_Engineering/Manual_uploads/: dbt_project.yml  web_gcs_fhv.py  web_gcs_yellow_2019.py
04_Analytics_Engineering/dbt_cloud_project/macros/: get_payment_type_description.sql
04_Analytics_Engineering/dbt_cloud_project/models/marts/: dim_vendors.sql  fct_monthly_zone_revenue.sql  fct_trips.sql
06_Batch_processing/: 06_pyspark.ipynb  Homework_questions.ipynb  pyproject.toml  test_spark.py
Final_project_zoomcamp_2026/: Divvy_web_to_gcs.py
bruin-pipeline/: all_tables.sql  sample.query.sql
bruin-pipeline/assets/: player_stats.sql  players.asset.yml
bruin-pipeline/my-taxi-pipeline/pipeline/: pipeline.yml
my-taxi-pipeline/pipeline/: pipeline.yml
my-taxi-pipeline/pipeline/assets/ingestion/: requirements.txt  trips.py
my-taxi-pipeline/pipeline/assets/reports/: trips_report.sql
pipeline/: notebook.ipynb  pyproject.toml
(+10 files in other folders)
