[project]
name = "pipeline"
version = "0.1.0"
description = "Zoomcamp ingestion pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "pyarrow",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
